Fine tuned the app to be more secure and added a  new feature to make a user an admin so they could remove comments if needed.  Finished styling views ,  added in a place on the homepage to view messages and a place to create messages.  switched some console.log statements to use the debug package.  added a readme.md file to the project.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node --env-file=.env ./bin/www",
     "dev": "node --env-file=.env --watch ./bin/www",
-    "serverstart": "DEBUG=app:app npm run dev",
+    "serverstart": "DEBUG=app:app,odin-members-only:server npm run dev",
     "lint": "eslint"
   },
   "dependencies": {
