--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@flydotio/dockerfile": "^0.5.7",
     "eslint": "^9.5.0",
     "globals": "^15.6.0"
   }
