got rid of some files and updated dockerignore to ignore scripts folder , eslint config file and readme file. set mode to production in package.json. compressed img from 56kb to 12kb.

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "odin-members-only",
   "version": "0.0.0",
   "private": true,
-  "mode": "development",
+  "mode": "production",
   "scripts": {
     "start": "node --env-file=.env ./bin/www",
     "dev": "node --env-file=.env --watch ./bin/www",
